--- a/package.json
+++ b/package.json
@@ -1,18 +1,31 @@
 {
-  "name": "my-package",
+  "name": "dgjs",
   "license": "MIT",
   "version": "0.0.1",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsup index.ts --format cjs,esm --dts",
+    "build": "tsup src/index.ts --format cjs,esm --dts",
     "release": "pnpm run build && changeset publish",
-    "lint": "tsc"
+    "start": "tsup src/index.ts --format cjs,esm --dts --watch",
+    "lint": "tsc",
+    "test": "jest"
   },
   "devDependencies": {
     "@changesets/cli": "^2.26.0",
+    "@types/jest": "^29.4.0",
+    "jest": "^29.4.3",
+    "ts-jest": "^29.0.5",
     "tsup": "^6.5.0",
     "typescript": "^4.9.4"
+  },
+  "dependencies": {
+    "@types/node": "^20.12.3",
+    "akkajs": "1.0.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
+    "groq-sdk": "^0.3.2",
+    "reflect-metadata": "^0.2.2"
   }
 }
