--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dgjs",
   "license": "MIT",
-  "version": "0.0.1",
+  "version": "2024.4.5",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
@@ -10,24 +10,26 @@
     "release": "pnpm run build && changeset publish",
     "start": "tsup src/index.ts --format cjs,esm --dts --watch",
     "lint": "tsc",
-    "test": "jest"
+    "test": "vitest"
   },
   "devDependencies": {
     "@changesets/cli": "^2.26.0",
-    "@types/jest": "^29.4.0",
-    "jest": "^29.4.3",
-    "ts-jest": "^29.0.5",
     "tsup": "^6.5.0",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "vitest": "^1.4.0"
   },
   "dependencies": {
+    "@faker-js/faker": "^8.4.1",
     "@types/node": "^20.12.3",
     "akkajs": "1.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "extract-json-from-string": "^1.0.1",
     "groq-sdk": "^0.3.2",
     "jsonschema": "^1.4.1",
     "reflect-metadata": "^0.2.2",
+    "rrule": "^2.8.1",
+    "rxjs": "^7.8.1",
     "typescript-json-schema": "^0.63.0"
   }
 }
