--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "resolveJsonModule": true,
     "moduleDetection": "force",
     /* Strictness */
-    "strict": false,
+    "strict": true,
     "noUncheckedIndexedAccess": true,
     /* If NOT transpiling with TypeScript: */
     "moduleResolution": "node",
@@ -18,6 +18,7 @@
     "lib": ["es2022", "dom", "dom.iterable"],
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
+    "types": ["vitest/globals"]
   },
   "include": ["src/**/*", "tests"]
 }
