--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dpgjs",
   "license": "MIT",
-  "version": "2024.4.6",
+  "version": "2024.4.12",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
@@ -10,10 +10,15 @@
     "release": "pnpm run build && changeset publish",
     "start": "tsup src/index.ts --format cjs,esm --dts --watch",
     "lint": "tsc",
-    "test": "vitest"
+    "test": "vitest",
+    "dev": "convex dev"
   },
   "devDependencies": {
     "@changesets/cli": "^2.26.0",
+    "@types/sinon": "^17.0.3",
+    "@types/uuid": "^9.0.8",
+    "convex": "^1.11.0",
+    "hygen": "^6.2.11",
     "tsup": "^6.5.0",
     "typescript": "^4.9.4",
     "vitest": "^1.4.0"
@@ -24,12 +29,15 @@
     "akkajs": "1.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "dotenv": "^16.4.5",
     "extract-json-from-string": "^1.0.1",
     "groq-sdk": "^0.3.2",
     "jsonschema": "^1.4.1",
     "reflect-metadata": "^0.2.2",
     "rrule": "^2.8.1",
     "rxjs": "^7.8.1",
-    "typescript-json-schema": "^0.63.0"
+    "sinon": "^17.0.1",
+    "typescript-json-schema": "^0.63.0",
+    "uuid": "^9.0.1"
   }
 }
