--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dpgjs",
   "license": "MIT",
-  "version": "2024.4.12",
+  "version": "2024.4.18",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
@@ -15,21 +15,27 @@
   },
   "devDependencies": {
     "@changesets/cli": "^2.26.0",
+    "@types/express": "^4.17.21",
     "@types/sinon": "^17.0.3",
+    "@types/supertest": "^6.0.2",
     "@types/uuid": "^9.0.8",
     "convex": "^1.11.0",
     "hygen": "^6.2.11",
+    "nock": "^13.5.4",
     "tsup": "^6.5.0",
     "typescript": "^4.9.4",
+    "unplugin-auto-import": "^0.17.5",
     "vitest": "^1.4.0"
   },
   "dependencies": {
     "@faker-js/faker": "^8.4.1",
     "@types/node": "^20.12.3",
     "akkajs": "1.0.1",
+    "axios": "^1.6.8",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "extract-json-from-string": "^1.0.1",
     "groq-sdk": "^0.3.2",
     "jsonschema": "^1.4.1",
@@ -37,6 +43,7 @@
     "rrule": "^2.8.1",
     "rxjs": "^7.8.1",
     "sinon": "^17.0.1",
+    "supertest": "^6.3.4",
     "typescript-json-schema": "^0.63.0",
     "uuid": "^9.0.1"
   }
