--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "extract-json-from-string": "^1.0.1",
     "groq-sdk": "^0.3.2",
     "jsonschema": "^1.4.1",
+    "ollama": "^0.5.1",
+    "openai": "^4.47.1",
     "reflect-metadata": "^0.2.2",
     "rrule": "^2.8.1",
     "rxjs": "^7.8.1",
